FF/IE - Fix z-index ordering of products current slideshow item when some overlay is open

--- a/less/plugins/ecommerce/product-gallery.less
+++ b/less/plugins/ecommerce/product-gallery.less
@@ -157,8 +157,9 @@
             opacity: 1;
         }
 
-
-
+        .search--open &, basket--open &, .navigation--open & {
+            z-index: auto;
+        }
     }
 
     // Next, Previous
